added nodemon npm package

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Backend of the v27 bears 05 habit tracking web app",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon server.js"
   },
   "repository": {
     "type": "git",
@@ -21,6 +21,7 @@
     "config": "^3.3.3",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "mongoose": "^5.11.15"
+    "mongoose": "^5.11.15",
+    "nodemon": "^2.0.7"
   }
 }
