--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "Backend of the v27 bears 05 habit tracking web app",
     "main": "server.js",
     "scripts": {
-        "start": "nodemon server.js"
+        "start": "concurrently \"nodemon server.js\" \"cd ../v27-bears-team-05 && npm run start\""
     },
     "repository": {
         "type": "git",
@@ -19,12 +19,13 @@
     "dependencies": {
         "bcryptjs": "^2.4.3",
         "colors": "^1.4.0",
+        "concurrently": "^6.0.2",
         "config": "^3.3.3",
         "cors": "^2.8.5",
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
-        "jsonwebtoken": "^8.5.1",
         "express-validator": "^6.9.2",
+        "jsonwebtoken": "^8.5.1",
         "mongoose": "^5.11.15"
     },
     "devDependencies": {
